--- a/oscar/oscar12.properties
+++ b/oscar/oscar12.properties
@@ -151,7 +151,7 @@ ontariomd_cds_diabetes_link = https://www.ontariomd.ca/cms/xml/ontariomd_cds_dia
 # E2E_DIFF_DAYS - integer number specifying number of days to look back at
 
 ModuleNames = E2E
-E2E_URL = http://localhost:3001/records/create
+E2E_URL = http://gateway:3001/records/create
 #E2E_DIFF = on
 #E2E_DIFF_DAYS = 14
 
@@ -173,12 +173,12 @@ spire_download_dir=/var/lib/spire/labs/
 hl7_a04_build_dir=/var/lib/adt/
 l7_a04_sent_dir=/var/lib/adt/sent/
 hl7_a04_fail_dir=/var/lib/adt/failed/
-	
+
 HL7_A04_GENERATION=false
-	
+
 HL7_A04_TRANSPORT_ADDR=127.0.0.1
 HL7_A04_TRANSPORT_PORT=3987
-	
+
 # Uncomment to enable sending A04 data to Emerald
 #ModuleNames=EmeraldA04
 
@@ -373,7 +373,7 @@ loginlogo =
 # the size of the receptionist's preference
 receptionist_alt_view = no
 
-# Default viewall of the main appointment screen                 
+# Default viewall of the main appointment screen
 # false  - when the appointment screen loads it will show only the scheduled physicians for today, similar to how it was in 9.12
 # true   - show the schedules for all the providers, including blank ones
 default_schedule_viewall = true
@@ -794,7 +794,6 @@ eform_generator_indivica_fax_enabled=false
 # True if Indivica Rich Text Letter is enabled and false otherwise.
 indivica_rich_text_letter_enabled=false
 
-#Seconds until a integrated facilty is considered Stale ( has not pushed to the integrator)  
 #Seconds until a integrated facilty is considered Stale ( has not pushed to the integrator)
 #This will cause a warning in the echart to alert user that this might not be all the data.
 #-1 will disable it.  Disabled by default
