--- a/config/oscar12.properties
+++ b/config/oscar12.properties
@@ -152,7 +152,7 @@ ontariomd_cds_diabetes_link = https://www.ontariomd.ca/cms/xml/ontariomd_cds_dia
 
 ModuleNames = E2E
 E2E_URL = http://gateway:3001/records/create
-#E2E_DIFF = on
+E2E_DIFF = off
 #E2E_DIFF_DAYS = 14
 
 #### for IBD clinic
