Set BC defaults for oscar12.properties

--- a/config/oscar12.properties
+++ b/config/oscar12.properties
@@ -58,7 +58,7 @@ hibernate.show_sql=false
 #db_uri = jdbc:postgresql://db_server/
 
 ## Oracle connections
-#db_name =
+db_name = oscar_12_1
 #db_type = oracle
 #db_driver = oracle.jdbc.OracleDriver
 #db_uri = jdbc:oracle:thin:@192.168.0.2:1521:smis
@@ -66,7 +66,7 @@ hibernate.show_sql=false
 
 ## DrugRef server
 # drugref_url = http://yourDrugRefServerIP:portNumber
-drugref_url = http://67.69.12.116:8001
+#drugref_url = http://67.69.12.116:8001
 
 # DrugRef search administration route ("Oral" is preset)
 # off : turn off ;  on : turn on
@@ -118,7 +118,7 @@ IMMUNIZATION_IN_PREVENTION=yes
 #HOME_DIR = /var/lib/tomcat6/webapps/OscarDocument/oscar_mcmaster/billing/download/
 
 # Documents directory
-#DOCUMENT_DIR = /var/lib/OscarDocument/oscar_mcmaster/document/
+DOCUMENT_DIR = /var/lib/tomcat6/webapps/OscarDocument/oscar_mcmaster/document/
 DOCUMENT_DOWNLOAD_METHOD = stream
 DOC_FORWARD: /dms/complete.jsp
 RA_FORWORD: /billing/CA/ON/genRA.jsp
@@ -127,7 +127,7 @@ TA_FORWARD: /billing/CA/BC/genTA.jsp
 
 # Demographic export/import
 # TeMPorary DIRectory for export/import  demographic files
-#TMP_DIR: /var/lib/OscarDocument/oscar_mcmaster/export/
+TMP_DIR: /var/lib/tomcat6/webapps/OscarDocument/oscar_mcmaster/export/
 
 #PGP BINary executable (with full path) for export files encryption
 PGP_BIN: /usr/bin/pgpgpg
@@ -201,7 +201,7 @@ SOB_CHECKALL=yes
 # bill region has two options: ON or BC
 # ON : Ontario
 # BC : British Columbia
-billregion=ON
+billregion=BC
 
 # hctype: this property is used to select the default value of HC Type field
 # when adding a new demographic. If this property is not specified, the billregion
@@ -241,7 +241,7 @@ inPatient = no
 # visit_type can be: Clinic Visit, Outpatient Visit, Hospital Visit, ER, Nursing Home, and Home Visit
 visit_type = Clinic Visit
 visittype = O|Physician's office
-visitlocation = P1|PEMBERTON
+visitlocation = 00|VANCOUVER
 dataCenterId = 00000
 #msp_error_codes = # file location of msp error codes
 
@@ -266,7 +266,7 @@ NEW_BC_TELEPLAN=yes
 SUPERUSER = oscardoc
 
 ## eform image file path
-#eform_image = /usr/local/OscarDocument/oscar_mcmaster/eform/images/
+eform_image = /var/lib/tomcat6/webapps/OscarDocument/oscar_mcmaster/eform/images
 # eform_databaseap_config = /usr/local/tomcat/OscarDocument/oscar_mcmaster/eform/apconfig.xml
 
 ## forms
@@ -361,7 +361,7 @@ label.height = 145
 label.gap = 0
 
 # New demographic
-phoneprefix = 905-
+phoneprefix = 250-
 
 # Login screen
 logintitle =
@@ -405,10 +405,10 @@ inactive_statuses = 'IN','DE','IC','ID','MO','FI'
 #pathnet_password=User?s Password
 
 ##CDM Reminder Codes
-#CDM_ALERTS=250,428,4280
+CDM_ALERTS=250,428,4280
 
 ##The following list indicates which codes will be used for Individual Counseling alerts
-#COUNSELING_CODES=18220,18120,17220,17120,16220,16120,13220,12220,12120,00120
+COUNSELING_CODES=18220,18120,17220,17120,16220,16120,13220,12220,12120,00120
 
 ##Alert Polling frequency in milliseconds
 #ALERT_POLL_FREQUENCY=240000
